fix snow text,project overflow

--- a/public/static/main.css
+++ b/public/static/main.css
@@ -190,6 +190,7 @@ footer {
   border-radius: 0px 0px 10px 10px; 
   background-color: var(--black-light);
   border: 1px solid var(--black-light);
+  overflow: hidden;
 
 
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -888,6 +889,7 @@ input:focus{
 
   .sayhi-nav {
     padding: 0 10px;
+    margin-top: 30px;
   }
 
   .sayhi-nav-images {
